# status-report-assistant-mcp

./: README.md  pyproject.toml
src/status_report_assistant_mcp/: cli.py  customized_exception.py  github_search_services.py  gmail_services.py  utils.py
